# matchboxdb

./: .clang-format  CMakeLists.txt  LICENSE  README.md  TODO.md  project-submission-readme.md
src/: command_executor.cpp  command_executor.h  errors.cpp  errors.h  file_read.cpp  file_read.h  file_write.cpp  file_write.h  insert_object.cpp  insert_object.h  logging.h  main.cpp  metadata.cpp  metadata.h  metadata_page.cpp  metadata_page.h  page.cpp  page.h  page_cache.cpp  page_cache.h  page_creator.cpp  page_creator.h  page_scanner.cpp  page_scanner.h  page_visitors.cpp  page_visitors.h  repl.cpp  result_visitor.cpp  result_visitor.h  row_mapping_page.cpp  row_mapping_page.h  select_object.cpp  select_object.h  slotted_data_page.cpp  slotted_data_page.h  streamutils.cpp  streamutils.h  table_initializer.cpp  table_initializer.h  test_utils.h  (+4 more)
src/actions/: delete_action.cpp  delete_action.h  describe_action.cpp  describe_action.h  insert_action.cpp  insert_action.h  insert_object.cpp  insert_object.h  select_action.cpp  select_action.h  update_action.cpp  update_action.h
src/dependencies/linenoise/: linenoise.c
src/interpreter/: block_statement.cpp  block_statement.h  boolean_expression.cpp  boolean_expression.h  call_expression.cpp  call_expression.h  eval.cpp  eval.h  expression.h  expression_statement.cpp  expression_statement.h  function_expression.cpp  function_expression.h  identifier.cpp  identifier.h  if_expression.cpp  if_expression.h  infix_expression.cpp  infix_expression.h  integer_literal.cpp  integer_literal.h  let_statement.cpp  let_statement.h  lexer.cpp  lexer.h  node.h  object.cpp  object.h  parser.cpp  parser.h  prefix_expression.cpp  prefix_expression.h  program.cpp  program.h  repl.cpp  return_statement.cpp  return_statement.h  statement.h  token.cpp  token.h
src/page/: defragger.cpp  defragger.h  metadata_page.cpp  metadata_page.h  page.cpp  page.h  page_cache.cpp  page_cache.h  page_creator.cpp  page_creator.h  page_scanner.cpp  page_scanner.h  page_visitors.cpp  page_visitors.h  row_mapping_page.cpp  row_mapping_page.h  slotted_data_page.cpp  slotted_data_page.h
src/sql_parser/: Identifier.cpp  Identifier.h  ast.h  boolean_literal.cpp  boolean_literal.h  create_statement.cpp  create_statement.h  delete_statement.cpp  delete_statement.h  describe_statement.cpp  describe_statement.h  drop_statement.cpp  drop_statement.h  expression.h  expression_statement.cpp  expression_statement.h  expression_visitor.cpp  expression_visitor.h  field_definition.cpp  field_definition.h  identifier.cpp  identifier.h  infix_expression.cpp  infix_expression.h  insert_statement.cpp  insert_statement.h  integer_literal.cpp  integer_literal.h  lexer.cpp  lexer.h  node.cpp  node.h  parse_errors.cpp  parse_errors.h  parser.cpp  parser.h  select_statement.cpp  select_statement.h  statement.h  statement_visitor.h  (+8 more)
src/storage/: metadata.cpp  streamutils.cpp  streamutils.h  table_initializer.cpp  table_initializer.h  tuple.cpp  tuple.h  utils.cpp  utils.h
tests/: create_statement_tests.cpp  delete_statement_tests.cpp  drop_statement_tests.cpp  insert_statement_tests.cpp  page_cache_tests.cpp  page_creator_tests.cpp  page_scanner_tests.cpp  select_statement_tests.cpp  slotted_data_page_tests.cpp  stream_tests.cpp  table_initializer_tests.cpp  test_utilities.cpp  test_utilities.h  tests.cpp  update_statement_tests.cpp
tests/command_execution/: create_statement_tests.cpp  delete_statement_tests.cpp  describe_statement_tests.cpp  drop_statement_tests.cpp  insert_statement_tests.cpp  select_statement_tests.cpp  update_statement_tests.cpp
tests/interpreter_tests/: eval_tests.cpp  lexer_tests.cpp  parser_tests.cpp
tests/sql_parser_tests/: evaluator_tests.cpp  lexer_tests.cpp  parser_tests.cpp
