cmake_minimum_required(VERSION 3.16)
project(matchboxdb)

set(CMAKE_CXX_STANDARD 20)

include(FetchContent)
FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

ENABLE_TESTING()

add_executable(
        alltests
        src/actions/delete_action.cpp
        src/actions/delete_action.h
        src/actions/insert_action.cpp
        src/actions/insert_action.h
        src/actions/insert_object.cpp
        src/actions/insert_object.h
        src/actions/select_action.cpp
        src/actions/select_action.h
        src/actions/update_action.cpp
        src/actions/update_action.h
        src/command_executor.cpp
        src/command_executor.h
        src/page/metadata_page.cpp
        src/page/metadata_page.h
        src/page/page.cpp
        src/page/page.h
        src/page/page_cache.cpp
        src/page/page_cache.h
        src/page/page_creator.cpp
        src/page/page_creator.h
        src/page/page_scanner.cpp
        src/page/page_scanner.h
        src/page/page_visitors.cpp
        src/page/page_visitors.h
        src/page/slotted_data_page.cpp
        src/page/slotted_data_page.h
        src/sql_parser/boolean_literal.cpp
        src/sql_parser/boolean_literal.h
        src/sql_parser/create_statement.cpp
        src/sql_parser/create_statement.h
        src/sql_parser/delete_statement.cpp
        src/sql_parser/delete_statement.h
        src/sql_parser/drop_statement.cpp
        src/sql_parser/drop_statement.h
        src/sql_parser/expression.h
        src/sql_parser/expression_statement.cpp
        src/sql_parser/expression_statement.h
        src/sql_parser/expression_visitor.cpp
        src/sql_parser/expression_visitor.h
        src/sql_parser/field_definition.cpp
        src/sql_parser/field_definition.h
        src/sql_parser/identifier.cpp
        src/sql_parser/identifier.h
        src/sql_parser/infix_expression.cpp
        src/sql_parser/infix_expression.h
        src/sql_parser/insert_statement.cpp
        src/sql_parser/insert_statement.h
        src/sql_parser/integer_literal.cpp
        src/sql_parser/integer_literal.h
        src/sql_parser/lexer.cpp
        src/sql_parser/lexer.h
        src/sql_parser/node.cpp
        src/sql_parser/node.h
        src/sql_parser/parser.cpp
        src/sql_parser/parser.h
        src/sql_parser/select_statement.cpp
        src/sql_parser/select_statement.h
        src/sql_parser/statement_visitor.h
        src/sql_parser/statement_visitor.h
        src/sql_parser/string_literal.cpp
        src/sql_parser/string_literal.h
        src/sql_parser/table.cpp
        src/sql_parser/table.h
        src/sql_parser/token.cpp
        src/sql_parser/token.h
        src/sql_parser/update_statement.cpp
        src/sql_parser/update_statement.h
        src/storage/metadata.cpp
        src/storage/metadata.h
        src/storage/streamutils.cpp
        src/storage/streamutils.h
        src/storage/table_initializer.cpp
        src/storage/table_initializer.h
        src/storage/tuple.cpp
        src/storage/tuple.h
        src/storage/utils.cpp
        src/storage/utils.h
        src/tuple_filter.cpp
        src/tuple_filter.h
        tests/command_execution/create_statement_tests.cpp
        tests/command_execution/delete_statement_tests.cpp
        tests/command_execution/drop_statement_tests.cpp
        tests/command_execution/insert_statement_tests.cpp
        tests/command_execution/select_statement_tests.cpp
        tests/command_execution/update_statement_tests.cpp
        tests/page_cache_tests.cpp
        tests/page_creator_tests.cpp
        tests/page_scanner_tests.cpp
        tests/slotted_data_page_tests.cpp
        tests/sql_parser_tests/evaluator_tests.cpp
        tests/sql_parser_tests/lexer_tests.cpp
        tests/sql_parser_tests/lexer_tests.cpp
        tests/sql_parser_tests/parser_tests.cpp
        tests/stream_tests.cpp
        tests/table_initializer_tests.cpp
        tests/test_utilities.cpp
        tests/test_utilities.h
        tests/tests.cpp
        src/sql_parser/describe_statement.cpp src/sql_parser/describe_statement.h src/actions/describe_action.cpp src/actions/describe_action.h tests/command_execution/describe_statement_tests.cpp src/page/defragger.cpp src/page/defragger.h)

target_link_libraries(alltests gtest gmock gtest_main)

add_test(NAME test COMMAND alltests)


add_executable(
        repl
        src/actions/delete_action.cpp
        src/actions/delete_action.h
        src/actions/insert_action.cpp
        src/actions/insert_action.h
        src/actions/insert_object.cpp
        src/actions/insert_object.h
        src/actions/select_action.cpp
        src/actions/select_action.h
        src/actions/update_action.cpp
        src/actions/update_action.h
        src/command_executor.cpp
        src/command_executor.h
        src/dependencies/linenoise/linenoise.c
        src/dependencies/linenoise/linenoise.h
        src/page/metadata_page.cpp
        src/page/metadata_page.h
        src/page/page.cpp
        src/page/page.h
        src/page/page_cache.cpp
        src/page/page_cache.h
        src/page/page_creator.cpp
        src/page/page_creator.h
        src/page/page_scanner.cpp
        src/page/page_scanner.h
        src/page/page_visitors.cpp
        src/page/page_visitors.h
        src/page/slotted_data_page.cpp
        src/page/slotted_data_page.h
        src/repl.cpp
        src/result_visitor.cpp
        src/result_visitor.h
        src/sql_parser/boolean_literal.cpp
        src/sql_parser/boolean_literal.h
        src/sql_parser/create_statement.cpp
        src/sql_parser/create_statement.h
        src/sql_parser/delete_statement.cpp
        src/sql_parser/delete_statement.h
        src/sql_parser/drop_statement.cpp
        src/sql_parser/drop_statement.h
        src/sql_parser/expression.h
        src/sql_parser/expression_statement.cpp
        src/sql_parser/expression_statement.h
        src/sql_parser/expression_visitor.cpp
        src/sql_parser/expression_visitor.h
        src/sql_parser/field_definition.cpp
        src/sql_parser/field_definition.h
        src/sql_parser/identifier.cpp
        src/sql_parser/identifier.h
        src/sql_parser/infix_expression.cpp
        src/sql_parser/infix_expression.h
        src/sql_parser/insert_statement.cpp
        src/sql_parser/insert_statement.h
        src/sql_parser/integer_literal.cpp
        src/sql_parser/integer_literal.h
        src/sql_parser/lexer.cpp
        src/sql_parser/lexer.h
        src/sql_parser/node.cpp
        src/sql_parser/node.h
        src/sql_parser/parser.cpp
        src/sql_parser/parser.h
        src/sql_parser/select_statement.cpp
        src/sql_parser/select_statement.h
        src/sql_parser/statement.h
        src/sql_parser/statement_visitor.h
        src/sql_parser/string_literal.cpp
        src/sql_parser/string_literal.h
        src/sql_parser/table.cpp
        src/sql_parser/table.h
        src/sql_parser/token.cpp
        src/sql_parser/token.h
        src/sql_parser/update_statement.cpp
        src/sql_parser/update_statement.h
        src/storage/metadata.cpp
        src/storage/metadata.cpp
        src/storage/metadata.h
        src/storage/metadata.h
        src/storage/streamutils.cpp
        src/storage/streamutils.h
        src/storage/table_initializer.cpp
        src/storage/table_initializer.h
        src/storage/tuple.cpp
        src/storage/tuple.h
        src/storage/utils.cpp
        src/storage/utils.h
        src/tuple_filter.cpp
        src/tuple_filter.h
        src/logging.h
        src/sql_parser/describe_statement.cpp
        src/sql_parser/describe_statement.h
        src/actions/describe_action.cpp
        src/actions/describe_action.h
        src/page/defragger.cpp
        src/page/defragger.h)

find_package(Threads REQUIRED)
target_link_libraries(repl PRIVATE Threads::Threads)